# openstack-vm-lifecycle-api

./: .gitignore  pyproject.toml
app/: main.py  schemas.py
app/api/v1/: vms.py
app/domain/: models.py
app/drivers/: base.py  mock_openstack.py
app/repo/: inmemory.py
app/services/: errors.py  vm_service.py
docs/: api.md  architecture.md  roadmap.md
openstack_vm_lifecycle_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_vms.py
